<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="150dp"
    android:background="@color/color_white"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/main_category_1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_1"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_1"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_2"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_2"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_3"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_3"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_3"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_4"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_4"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_4"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_5"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_5"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_5"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_6"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_6"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_6"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_7"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_7"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_7"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_8"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_8"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_8"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/main_category_9"
            android:orientation="vertical">

            <ImageView
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/category_9"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/main_category_9"
                android:textColor="@color/color_gray"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>