<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@color/color_white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/product_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/product_detail_title"
            android:textColor="@color/color_gray"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/product_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_detail_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_1"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="100개입"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_1"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_2"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="A++"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_2"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_3"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="뭔말인지 모르겠네여"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_3"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_4_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_4"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="상온보관"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_4"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_5_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_5"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="칠레산"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_5"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/product_detail_6_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_detail_6"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/product_detail_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="206dp"
                    android:text="해당사항 없음"
                    android:textColor="@color/color_gray"
                    android:textSize="10sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/product_detail_6"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_soft_gray" />
            </RelativeLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/product_detail_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_info"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/temp_product_detail" />
    </RelativeLayout>


</RelativeLayout>